fixing a display issue

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
                         </div>
                     </div>
                     <div id="chart-content" class="tab-content">
-                         <div id="expense-pie-chart-container" class="chart-container-wrapper">
+                         <div id="expense-pie-chart-container" class="chart-container-wrapper" style="display: none;">
                              <div class="chart-container">
                                 <canvas id="expanded-expense-chart"></canvas> 
                              </div>
                          </div>
 
-                         <div id="loan-chart-content" class="chart-container-wrapper" style="display: none;">
+                         <div id="loan-chart-content" class="chart-container-wrapper">
                             <div id="loan-chart-controls" class="chart-controls-container">
                                 <div class="form-group">
                                     <label>Select Loans:</label>
