--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
                     <div id="chart-content" class="tab-content">
                          <div id="expense-pie-chart-container" class="chart-container-wrapper" style="display: none;">
                              <div class="chart-container">
-                                <canvas id="expanded-expense-chart"></canvas> 
+                                <canvas id="expanded-expense-chart"></canvas>
+                                <div id="expanded-expense-details" style="display: none;">
+                                    </div>
                              </div>
                          </div>
 
