--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                     <div id="chart-content" class="tab-content">
-                         <div id="expense-pie-chart-container" class="chart-container-wrapper" style="display: none;">
+                         <div id="expense-pie-chart-container" class="chart-container-wrapper"">
                              <div class="chart-container">
                                 <canvas id="expanded-expense-chart"></canvas>
                                 <div id="expanded-expense-details" style="display: none;">
@@ -81,7 +81,7 @@
                              </div>
                          </div>
 
-                         <div id="loan-chart-content" class="chart-container-wrapper">
+                         <div id="loan-chart-content" class="chart-container-wrapper" style="display: none;">
                             <div id="loan-chart-controls" class="chart-controls-container">
                                 <div class="form-group">
                                     <label>Select Loans:</label>
