--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section id="dashboard-section" class="app-section">
             <div class="section-header">
                 <h2>Dashboard</h2>
-                <button id="toggle-dashboard-btn" title="Toggle Dashboard View">↔️</button>
+                <button id="toggle-dashboard-btn" title="Toggle Dashboard View">Grids & Charts</button>
             </div>
             <div id="dashboard-summary"></div>
             <div class="chart-container" id="summary-chart-container">
