adding historic view to grids

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                     <div class="view-group" data-tab-group="grids">
                         <button class="view-btn active" data-view="2m">2 Month</button>
                         <button class="view-btn" data-view="6m">6 Month</button>
-                        <button class="view-btn" data-view="yearly">Yearly Summary</button> 
+                        <button class="view-btn" data-view="yearly">Yearly Summary</button>
+                        <button class="view-btn" data-view="historic">Historic</button> </div> 
                     </div>
                     <div class="view-group" data-tab-group="charts" style="display: none;">
                          <button class="view-btn active" data-view="expensePie">Expenses</button>
@@ -69,6 +70,12 @@
                             </div>
                             <div id="grid-detail-content">
                                 Detail Panel
+                            </div>
+                        </div>
+                        <div id="grid-historic-content" class="grid-layout-container" style="display: none;">
+                            <div id="grid-historic-year-panel">
+                            </div>
+                            <div id="grid-historic-detail-content">
                             </div>
                         </div>
                     </div>
