adding net worth, agi and magi

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <button id="toggle-dashboard-btn" title="Toggle Dashboard View">Grids & Charts</button>
             </div>
             <div id="dashboard-summary"></div>
+            <div id="dashboard-forecast" class="dashboard-summary"></div>
             <div class="chart-container" id="summary-chart-container">
                 <canvas id="expense-chart"></canvas>
             </div>
