--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
             </div>
         </div>
     </header>
+    <nav class="app-nav-bar">
+        <button class="app-nav-btn active" data-target="financial-app">Financial</button>
+        <button class="app-nav-btn" data-target="travel-app">Trip Planner</button>
+    </nav>
     <main>
+        <div id="financial-app" class="app-container active">
         <section id="dashboard-section" class="app-section">
             <div class="section-header">
                 <h2>Dashboard</h2>
@@ -116,8 +121,6 @@
                         </div>
                     </div>
                 </div>
-            </div> 
-
         </section>
         <section id="income-section" class="app-section">
             <div class="section-header"><h2>Income Sources</h2></div>
@@ -155,6 +158,24 @@
                 <ul id="transfer-list" class="item-list"></ul>
             </div>
         </section>
+        </div>
+        <div id="travel-app" class="app-container" style="display: none;">
+            <section class="app-section">
+                <div class="section-header">
+                    <h2>Trip Planner</h2>
+                </div>
+                <p>Welcome to your Bucket List. (AI features coming soon!)</p>
+                <div class="section-controls">
+                     <button id="add-travel-item-btn" class="btn-primary">Add Destination</button>
+                </div>
+                <hr class="divider">
+                <div id="travel-list-container">
+                    <ul id="travel-list" class="item-list">
+                        <li><em>No trips added yet.</em></li>
+                    </ul>
+                </div>
+            </section>
+        </div>
     </main>
     <footer>
        <div class="footer-content">
