update travel to show

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             </div>
         </section>
         </div>
-        <div id="travel-app" class="app-container" style="display: none;">
+        <div id="travel-app" class="app-container">
             <section class="app-section">
                 <div class="section-header">
                     <h2>Trip Planner</h2>
