--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 
                 <nav class="section-tabs">
                     <button class="section-tab-btn" data-target="income-section">Income Sources</button>
-                    <button class="section-tab-btn active" data-target="expenses-section">Expense Log</button>
+                    <button class="section-tab-btn active" data-target="expense-section">Expense Log</button>
                     <button class="section-tab-btn" data-target="banking-section">Banking & Investment</button>
                     <button class="section-tab-btn" data-target="liabilities-section">Loans & Credit</button>
                 </nav>
@@ -136,7 +136,7 @@
                     <ul id="income-list" class="item-list"><li>Loading...</li></ul>
                 </section>
                 
-                <section id="expenses-section" class="app-section tab-panel">
+                <section id="expense-section" class="app-section tab-panel">
                     <div class="section-header">
                         <h2>Expenses</h2>
                         <button id="show-expense-modal-btn" class="btn-primary">Add Expense</button>
