--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <ul id="income-list" class="item-list"><li>Loading...</li></ul>
                 </section>
                 
-                <section id="expense-section" class="app-section tab-panel">
+                <section id="expense-section" class="app-section tab-panel active">
                     <div class="section-header">
                         <h2>Expenses</h2>
                         <button id="show-expense-modal-btn" class="btn-primary">Add Expense</button>
