--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@
                 <section id="income-section" class="app-section tab-panel">
                     <div class="section-header">
                         <h2>Incomes</h2>
-                        <button id="show-income-modal-btn" class="btn-primary">Add Income</button>
+                        <div class="header-controls-group">
+                            <button id="toggle-income-list-view" class="btn-secondary">Show Current</button>
+                            <button id="show-income-modal-btn" class="btn-primary">Add Income</button>
+                        </div>
                     </div>
                     
                     <div class="ledger-header">
@@ -139,7 +142,10 @@
                 <section id="expense-section" class="app-section tab-panel active">
                     <div class="section-header">
                         <h2>Expenses</h2>
-                        <button id="show-expense-modal-btn" class="btn-primary">Add Expense</button>
+                        <div class="header-controls-group">
+                            <button id="toggle-expense-list-view" class="btn-secondary">Show Current</button>
+                            <button id="show-expense-modal-btn" class="btn-primary">Add Expense</button>
+                        </div>
                     </div>
 
                     <div class="ledger-header">
