--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                     <div class="dashboard-group collapsed" id="dash-group-overview">
                         <h3 class="dashboard-group-header" data-target="dash-content-overview">
-                            <span class="toggle-icon">▶</span> Annual Overview
+                            <span class="toggle-icon">▶</span> Overview
                         </h3>
                         <div id="dash-content-overview" class="dashboard-group-content" style="display: none;">
                             <div id="dashboard-summary"></div> <div id="dashboard-forecast" class="dashboard-summary"></div> <div class="chart-container" id="summary-chart-container">
