--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                     <div class="dashboard-group expanded" id="dash-group-banks">
                         <h3 class="dashboard-group-header" data-target="dash-content-banks">
-                            <span class="toggle-icon">▼</span> Liquid Cash
+                            <span class="toggle-icon">▼</span> Bank Balances
                         </h3>
                         <div id="dash-content-banks" class="dashboard-group-content">
                             <div id="dashboard-bank-summary">
